@@ -1,3 +1,9 @@
+2002-06-21  Stephen Browne <stephen.bronwe@sun.com>
+
+	* gnome-keybinding-properties.c : moved metacity detection
+	out of here and into a more generic API in capplets/common/wm-common.c
+
+
 2002-06-17  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.0.0
