@@ -1,3 +1,9 @@
+2002-06-21  Stephen Browne <stephen.browne@sun.com>
+
+	* wm-common.[ch] : added new files to expose
+	wm_common_get_current_window_manager and 
+	wm_common_register_window_manager_change
+
 2002-06-13  Jody Goldberg <jody@gnome.org>
 
 	* capplet-util.c (capplet_help) : Use the new utility.
